--- a/Pong/Pong.vcxproj
+++ b/Pong/Pong.vcxproj
@@ -81,11 +81,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game_state.h" />
+    <ClInclude Include="main_game.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="menu.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main_game.cpp" />
     <ClCompile Include="Pong.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="menu.cpp" />
