--- a/Pong/Pong.vcxproj
+++ b/Pong/Pong.vcxproj
@@ -80,8 +80,10 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="entity.h" />
     <ClInclude Include="game_state.h" />
     <ClInclude Include="main_game.h" />
+    <ClInclude Include="paddle_player.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="menu.h" />
