--- a/Pong/Pong.vcxproj.filters
+++ b/Pong/Pong.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="main_game.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="entity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="paddle_player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
