--- a/Pong/Pong.vcxproj
+++ b/Pong/Pong.vcxproj
@@ -80,17 +80,22 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ball.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="game_state.h" />
     <ClInclude Include="main_game.h" />
     <ClInclude Include="paddle_player.h" />
+    <ClInclude Include="score.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="menu.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ball.cpp" />
     <ClCompile Include="main_game.cpp" />
+    <ClCompile Include="paddle_player.cpp" />
     <ClCompile Include="Pong.cpp" />
+    <ClCompile Include="score.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="menu.cpp" />
   </ItemGroup>
