--- a/Pong/Pong.vcxproj.filters
+++ b/Pong/Pong.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="paddle_player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ball.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="score.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -52,6 +58,15 @@
     </ClCompile>
     <ClCompile Include="main_game.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="paddle_player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ball.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="score.cpp">
+      <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
