--- a/Pong/Pong.vcxproj
+++ b/Pong/Pong.vcxproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ball.h" />
+    <ClInclude Include="block.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="game_state.h" />
     <ClInclude Include="main_game.h" />
@@ -92,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ball.cpp" />
+    <ClCompile Include="block.cpp" />
     <ClCompile Include="main_game.cpp" />
     <ClCompile Include="paddle_player.cpp" />
     <ClCompile Include="Pong.cpp" />
